[arief] - integration phase 1

--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "@heroicons/react": "v1",
     "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10.4.11",
+    "axios": "^1.1.2",
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
     "es2015": "^0.0.0",
+    "form-data": "^4.0.0",
     "heroicons": "^2.0.11",
+    "js-cookie": "^3.0.1",
     "next": "12.3.0",
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-select": "^5.4.0",
     "react-table": "^7.8.0",
