--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
     "es2015": "^0.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "form-data": "^4.0.0",
     "heroicons": "^2.0.11",
     "js-cookie": "^3.0.1",
