--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
-    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-select": "^5.4.0",
     "react-table": "^7.8.0",
+    "react-toastify": "^9.1.1",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
