[arief] - refactor axios default url, adding toast message, adding progress bar

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "heroicons": "^2.0.11",
     "js-cookie": "^3.0.1",
     "next": "12.3.0",
+    "nextjs-progressbar": "^0.0.16",
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
