--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "form-data": "^4.0.0",
     "heroicons": "^2.0.11",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
     "next": "12.3.0",
+    "next-router": "^1.3.6",
     "nextjs-progressbar": "^0.0.16",
     "postcss": "^8.4.16",
     "react": "18.2.0",
